# rephraser

./: .gitignore  ACCESSIBILITY_IMPLEMENTATION.md  BUILD_AND_PACKAGE.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  EMAIL_TO_ADMIN.txt  IMPLEMENTATION_SUMMARY.md  KEYBOARD_SHORTCUT_GUIDE.md  PRODUCTION_READY.md  PROJECT_STATUS.md  Procfile  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SETUP.md  START_HERE_DEPLOY.md  TESTER_INSTRUCTIONS.md  TESTING.md  USER_INSTALLATION_GUIDE.md  build-and-sign.sh  build-appstore.sh  build-direct.sh  package-for-testing.sh  package-lock.json  package.json  tailwind.config.js
.github/workflows/: keep-alive.yml
backend-proxy/: .env.example  README.md  app.json  package-lock.json  package.json  render.yaml  server.js
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accessibility.rs  ai.rs  config.rs  keychain.rs  lib.rs
src/components/: Popup.tsx  Settings.tsx
src/store/: appStore.ts
